# chronos

./: .gitignore  .gitmodules  Cargo.toml  GNUmakefile  README.md  int80test  int80test.asm  kernel_disk.qcow2  limine.conf  linker-user-x86_64.ld  nohup.out
initramfs/: Cargo.toml  test.rs
initramfs/src/: main.rs  syscalls.rs
kernel/: .gitignore  Cargo.toml  GNUmakefile  build.rs  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/res/: config.toml  kernel.cfg  test.elf
kernel/src/: main.rs
kernel/src/arch/: aarch64.rs  gdt.rs  interrupts.rs  mod.rs  pic.rs  shell.rs  time.rs  x86_64.rs
kernel/src/arch/aarch64/: mod.rs
kernel/src/arch/aarch64/device/: serial.rs
kernel/src/arch/aarch64/drivers/: mod.rs
kernel/src/arch/aarch64/drivers/time/: generic.rs  mod.rs
kernel/src/arch/aarch64/interrupts/: mod.rs
kernel/src/arch/device/: mod.rs  serial.rs
kernel/src/arch/drivers/: keyboard.rs  mod.rs  mouse.rs  pic.rs  pit.rs
kernel/src/arch/drivers/acpi/: mod.rs  uacpi.rs
kernel/src/arch/drivers/time/: hpet.rs  kvm.rs  mod.rs  pit.rs  rtc.rs  tsc.rs
kernel/src/arch/interrupts/: mod.rs  pic.rs
kernel/src/arch/sched/: mod.rs  thread.rs
kernel/src/arch/system/: cpu.rs  cpuid.rs  elf.rs  lapic.rs  mod.rs  syscall.rs
kernel/src/arch/x86_64/: gdt.rs  mod.rs  shell.rs
kernel/src/arch/x86_64/device/: pci.rs  serial.rs
kernel/src/arch/x86_64/drivers/: keyboard.rs  mod.rs  mouse.rs
kernel/src/arch/x86_64/drivers/acpi/: mod.rs  uacpi.rs
kernel/src/arch/x86_64/drivers/time/: hpet.rs  kvm.rs  mod.rs  pit.rs  rtc.rs  tsc.rs
kernel/src/arch/x86_64/interrupts/: mod.rs  pic.rs  syscall.rs
kernel/src/arch/x86_64/system/: cpu.rs  cpuid.rs  interrupts.rs  isr.S  lapic.rs  mod.rs  pic.rs
kernel/src/arch/x86_64/system/syscall/: id.rs  mod.rs  syscall.S
kernel/src/device/: mod.rs  nvme.rs  pci.rs  serial.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/acpi/: mod.rs  uacpi.rs
kernel/src/drivers/fs/: helpers.rs  mod.rs  types.rs
kernel/src/memory/: mod.rs  vmm.rs
kernel/src/memory/allocator/: fixed_size_block.rs  linked_list.rs  mod.rs
kernel/src/scheduler/: cooperative.rs  mod.rs  preemptive.rs  task.rs  thread.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  scheduler.rs  timer.rs
kernel/src/tests/: memory.rs  mod.rs  time.rs
kernel/src/utils/: cmem.rs  config.rs  elf.rs  heapless.rs  limine.rs  logger.rs  memcmp.rs  mod.rs  mutex.rs  serial.rs  shell.rs  spinlock.rs  term.rs  time.rs  ustar.rs
kernel/src/utils/asm/: mem.rs  mmio.rs  mod.rs  port.rs  regs.rs
ramfs/: test.rs
std/: Cargo.toml
std/src/: elf.rs  fs.rs  lib.rs  memory.rs  spinlock.rs  syscalls.rs  time.rs
std/src/asm/: mem.rs  mmio.rs  mod.rs  regs.rs
std/src/kernel/: paging.rs
userspace/: GNUmakefile  build.rs
userspace/echo/: Cargo.toml
userspace/echo/src/: main.rs
userspace/elfs/: echo  shell
userspace/shell/: Cargo.toml
userspace/shell/src/: main.rs
