[package]
name = "chronos"
version = "0.1.0"
authors = ["bugo07"]
edition = "2024"

[dependencies]
pc-keyboard = "0.8.0" # TODO: my own keyboard types
uacpi-sys = { path = "../bindings/uacpi-sys" }
std = { path = "../std", features = ["kernel"] }

[features]
# default = ["tests"] # to get intelisense on test files
tests = []
uacpi_test = []
